[package]
name = "tiny-merkle-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glassbench = "0.3.5"
rand = "0.8.5"
firedancer-sys={path="../firedancer/ffi/rust/firedancer-sys"}
solana-sdk="1.16.5"
serde = "1.0.178"
serde_json = "1.0.104"

[[bench]]
name = "merkle_bench"
harness = false